changed contact delete signature, request validation added
